--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
-    <title>Home</title>
+    <title>badboyz</title>
 
     <!-- Style Begin-->
     <link rel="stylesheet" href="./assets/plugins/bootstrap-5.0.2-dist/css/bootstrap.min.css">
@@ -63,31 +63,5 @@
         });
     }
 </script>
-<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script>
-    var swiper = new Swiper(".mySwiper", {
-        loop: true,
-
-        centeredSlides: true,
-        pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-        },
-        autoplay: {
-            delay: 3000,
-            disableOnInteraction: false,
-        },
-        breakpoints: {
-            0: {
-                slidesPerView: 1.5,
-                spaceBetween: 20,
-            },
-            768: {
-                slidesPerView: 3,
-                spaceBetween: 30,
-            },
-        }
-    });
-</script> -->
 
 </html>
