--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <title>badboyz</title>
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-    <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
-    <title>badboyz</title>
+    <!-- <link rel="stylesheet" href="./assets/css/carousel.css" /> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet"/>
 
     <!-- Style Begin-->
     <link rel="stylesheet" href="./assets/plugins/bootstrap-5.0.2-dist/css/bootstrap.min.css">
@@ -28,6 +27,8 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="./assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<!-- <script src="./assets/js/carousel.js"></script> -->
 <script src="./assets/js/wow.js"></script>
 <script>
     $(function(){
@@ -39,6 +40,15 @@
             $('.nav_menu').css('display', 'none');
         }
     })
+    $('.slider').slick({
+        arrows: true,
+        centerMode: true,
+        infinite: true,
+        centerPadding: '250px',
+        slidesToShow: 1,
+        speed: 500,
+        dots: false,
+    });
 </script>
 <script>
     // PRELOADER
