--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     <title>badboyz</title>
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
     <!-- <link rel="stylesheet" href="./assets/css/carousel.css" /> -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet"/>
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" rel="stylesheet"/> -->
 
     <!-- Style Begin-->
     <link rel="stylesheet" href="./assets/plugins/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/">
 
 </head>
 
@@ -27,10 +27,10 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="./assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script> -->
 <!-- <script src="./assets/js/carousel.js"></script> -->
 <script src="./assets/js/wow.js"></script>
-<script>
+<!-- <script>
     $(function(){
         $('.fa-align-justify').on('click', function(){
             $('.nav_menu').css('display', 'block');
@@ -49,8 +49,8 @@
         speed: 500,
         dots: false,
     });
-</script>
-<script>
+</script> -->
+<!-- <script>
     // PRELOADER
     $(window).load(function(){
         $("body").addClass("page-loaded");	
@@ -72,6 +72,6 @@
             }
         });
     }
-</script>
+</script> -->
 
 </html>
