--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>badboyz</title>
+    <title>title</title>
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
