--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>title</title>
+    <title>BadBoyz</title>
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <!-- Style Begin-->
     <!-- <link rel="stylesheet" href="./assets/plugins/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./assets/plugins/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -25,6 +26,7 @@
   <div id="root"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="./assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 <script src="./assets/js/wow.js"></script>
 <script>
