--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,9 @@
     <!-- Style Begin-->
     <!-- <link rel="stylesheet" href="./assets/plugins/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
-    <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="./assets/plugins/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/">
 
 </head>
 
@@ -27,8 +26,15 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-<script src="./assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-<script src="./assets/js/wow.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.js"></script>
+<!-- <script src="./assets/js/wow.js"></script> -->
+<script>
+    // PRELOADER
+    $(window).load(function(){
+        $("body").addClass("page-loaded");	
+        console.log("page full loaded")
+    });
+</script>
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
