--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.js"></script>
 <!-- <script src="./assets/js/wow.js"></script> -->
-<script>
-    // PRELOADER
+<!-- <script>
     $(window).load(function(){
         $("body").addClass("page-loaded");	
         console.log("page full loaded")
     });
-</script>
+</script> -->
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
