--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>BadBoyz</title>
-    <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/images/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <!-- Style Begin-->
